nvim,tmux: consistent split creation shortcuts
<leader>| - vertical split
<leader>_ - horizontal split

--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -14,8 +14,8 @@ bind b set -g status
 bind r source-file ~/.tmux.conf
 
 # Splitting windows
-bind-key '"' split-window
-bind-key % split-window -h
+bind-key '-' split-window
+bind-key | split-window -h
 # Move panes and windows around
 bind < swap-window -t -1
 bind > swap-window -t +1
