--- a/modules/ranger/files/.config/ranger/rc.conf
+++ b/modules/ranger/files/.config/ranger/rc.conf
@@ -125,10 +125,10 @@ set status_bar_on_top false
 set draw_progress_bar_in_status_bar true
 
 # Draw borders around columns?
-set draw_borders false
+set draw_borders true
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -154,7 +154,7 @@ set shorten_title 3
 set hostname_in_titlebar true
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -255,7 +255,7 @@ set global_inode_type_filter
 # You can set local options that only affect a single directory.
 
 # Examples:
-# setlocal path=~/downloads sort mtime
+setlocal path=~/dwn sort mtime
 
 # ===================================================================
 # == Command Aliases in the Console
