tmux: add terminal override for changing cursor shape

--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -73,3 +73,4 @@ set -g message-style bg=colour235
 
 # Temporary workaround for st
 set -as terminal-overrides ',st*:Ss@'
+set -as terminal-overrides ',st*:Ss=\E[%p1%d q:Se=\E[2 q'
