nvim: add gopls to coc-settings.json

--- a/modules/nvim/files/.config/nvim/coc-settings.json
+++ b/modules/nvim/files/.config/nvim/coc-settings.json
@@ -6,6 +6,11 @@
       "command": "metals-vim",
       "rootPatterns": ["build.sbt", "pom.xml"],
       "filetypes": ["scala", "sbt"]
+    },
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod"],
+      "filetypes": ["go"]
     }
   }
 }
