polybar: add a few more icons

--- a/modules/polybar/files/.config/polybar/config
+++ b/modules/polybar/files/.config/polybar/config
@@ -94,6 +94,8 @@ ws-icon-9 = gauss;
 ws-icon-10 = rss;
 ws-icon-11 = lutris;
 ws-icon-12 = docker;
+ws-icon-13 = go;
+ws-icon-14 = news;
 
 label-mode-padding = 2
 label-mode-foreground = #000
