--- a/modules/git/files/.gitconfig
+++ b/modules/git/files/.gitconfig
@@ -57,9 +57,9 @@
 	process = git-lfs filter-process
 
 [commit]
-	#gpgSign = true
+	gpgSign = true
 [tag]
-	#gpgSign = true
+	gpgSign = true
 
 [url "git@github.com:"]
 	insteadOf = "https://github.com/"
