--- a/modules/polybar/files/.config/polybar/config
+++ b/modules/polybar/files/.config/polybar/config
@@ -98,6 +98,7 @@ ws-icon-13 = go;
 ws-icon-14 = news;
 ws-icon-15 = java;
 ws-icon-16 = music;
+ws-icon-17 = steam;
 
 label-mode-padding = 2
 label-mode-foreground = #000
