tmux: remove zenburn color scheme for now, use terminal colors

--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -45,31 +45,15 @@ set-option -g history-limit 10000
 # but not so much in terminal multiplexers where that zero is all the way on the other side of the keyboard.
 set-option -g base-index 1
 
-set -g default-terminal screen-256color
 
-# Zenburn color theme
-setw -g clock-mode-colour colour117
+# Basic color scheme
+# set -g default-terminal screen-256color
 setw -g mode-style bold
-setw -g mode-style fg=colour117
-setw -g mode-style bg=colour238
-set -g status-style bg=colour235
-set -g status-style fg=colour248
 set -g status-style dim
-set -g status-left '#[fg=colour187,bold]#H|'
 set -g status-left-length 25
-set -g status-right '#[fg=colour187,bold]#S'
 set -g status-right-length 80
-
-set -g pane-border-style fg=colour235
-set -g pane-active-border-style fg=colour117
-
-setw -g window-status-current-style fg=colour223
-setw -g window-status-current-style bg=colour237
 setw -g window-status-current-style bold
 set -g message-style bold
-set -g message-style fg=colour117
-set -g message-style bg=colour235
-
 
 # Temporary workaround for st
 set -as terminal-overrides ',st*:Ss@'
