--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -73,7 +73,7 @@ bindsym $mod+space exec --no-startup-id "rofi -show drun"
 bindsym $mod+Tab exec --no-startup-id "rofi -show window"
 
 # start bitwarden
-bindsym $mod+backslash exec --no-startup-id "$HOME/bin/bwmenu -- -width 50"
+bindsym $mod+backslash exec --no-startup-id "bwmenu -- -width 50"
 
 # start clerk
 # bindsym $mod+m exec --no-startup-id "clerk"
@@ -132,7 +132,7 @@ bindsym $mod+Shift+space floating toggle
 # bindsym $mod+space focus mode_toggle
 
 # swap monitors
-bindsym $mod+m exec --no-startup-id "$HOME/bin/swap-monitor.sh"
+bindsym $mod+m exec --no-startup-id "$HOME/.local/bin/swap-monitor.sh"
 
 # Some windows should always float
 for_window [instance="pinentry"] floating enable
@@ -198,7 +198,7 @@ bindsym Shift+F10 move container to workspace number 10
 # rename current workspace
 bindsym $mod+i exec --no-startup-id i3-input -f 'terminus 9' -F 'rename workspace to "%s"' -P 'New name: '
 
-bindsym $mod+Shift+x exec --no-startup-id "~/bin/i3lock-extra -p -s"
+bindsym $mod+Shift+x exec --no-startup-id "$HOME/.local/bin/i3lock-extra -p -s"
 bindcode 107 exec --no-startup-id "$HOME/.virtualenvs/escrotum/bin/escrotum '%Y-%m-%d-%H.%M.%S.png' -e 'mv $f ~/pic/screenshots && s3cmd -c ~/.s3cfg.personal put --acl-public ~/pic/screenshots/$f s3://screenshot.apetre.sc/ && echo http://screenshot.apetre.sc.s3.amazonaws.com/$f | xclip && xdg-open http://screenshot.apetre.sc/$f'"
 bindcode --release Shift+107 exec "$HOME/.virtualenvs/escrotum/bin/escrotum '%Y-%m-%d-%H.%M.%S.png' -s -e 'mv $f ~/pic/screenshots && s3cmd -c ~/.s3cfg.personal put --acl-public ~/pic/screenshots/$f s3://screenshot.apetre.sc/ && echo http://screenshot.apetre.sc.s3.amazonaws.com/$f | xclip && xdg-open http://screenshot.apetre.sc/$f'"
 
@@ -251,4 +251,4 @@ smart_borders no_gaps
 #exec --no-startup-id xautolock -time 10 -locker "$HOME/bin/i3lock-extra -p -s" &
 #exec_always --no-startup-id $HOME/bin/launch_compton.sh
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id unclutter --timeout 1 -b
+#exec_always --no-startup-id unclutter --timeout 1 -b
