tmux: setting default-terminal BACK to tmux-256color
I don't think I'll ever quite understand how to manage this setting but
for now it seems to be the only way to get italics properly.

--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -48,6 +48,7 @@ set-option -g base-index 1
 
 # Basic color scheme
 # set -g default-terminal screen-256color
+set -g default-terminal tmux-256color
 setw -g mode-style bold
 set -g status-style dim
 set -g status-left-length 25
