--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -57,6 +57,9 @@ client.background       $bg
 # Don't focus mouse to not interfere with unclutter
 mouse_warping none
 
+# Don't focus on mouse hover at all, actually
+focus_follows_mouse no
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -67,7 +70,7 @@ bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec --no-startup-id "rofi -show drun"
+bindsym $mod+space exec --no-startup-id "rofi -m -4 -show drun"
 
 # start window switcher
 bindsym $mod+Tab exec --no-startup-id "rofi -show window"
