nvim: calm down a little with how often CoC completions pop up

--- a/modules/nvim/files/.config/nvim/coc-settings.json
+++ b/modules/nvim/files/.config/nvim/coc-settings.json
@@ -3,6 +3,7 @@
   "python.formatting.autopep8Args": ["--max-line-length", "100"],
   "list.source.symbols.defaultOptions": ["--number-select"],
   "list.source.outline.defaultOptions": ["--number-select"],
+  "suggest.autoTrigger": "trigger",
   "languageserver": {
     "metals": {
       "command": "metals-vim",
