--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -201,6 +201,10 @@ bindsym $mod+Shift+0 move container to workspace number 10
 #bindsym Shift+F11 move container to workspace number 11
 #bindsym Shift+F12 move container to workspace number 12
 
+# Scratchpad
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
+
 # rename current workspace
 bindsym $mod+i exec --no-startup-id i3-input -f 'terminus 9' -F 'rename workspace to "%s"' -P 'New name: '
 
