--- a/modules/polybar/files/.config/polybar/config
+++ b/modules/polybar/files/.config/polybar/config
@@ -42,9 +42,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = xos4 Terminus:pixelsize=8
-font-1 = Hack:pixelsize=8;0
-font-2 = Hack Nerd Font:pixelsize=10;0
+font-0 = xos4 Terminus:pixelsize=8:antialias=false
+font-1 = Hack Nerd Font:pixelsize=8
 
 modules-left = i3
 modules-center =
