i3: get rid of gaps configurations
If needed, I'll move those to an i3-gaps-specific config file and source
that dynamically.

--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -250,17 +250,10 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
 
-hide_edge_borders smart
-# i3-gaps config section
-gaps inner 20
-gaps outer 30
+hide_edge_borders none
 
-smart_gaps on
-smart_borders no_gaps
-# ======================
 
 # Bar settings
 bar {
