i3: use system mono font

--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod1
 # ---------------
 # Fonts
 # ---------------
-font pango:Terminus 14px
+font pango:mono 14px
 
 
 # ---------------
