mpd: use gauss' database as a proxy

--- a/modules/mpd/files/.config/mpd/mpd.conf
+++ b/modules/mpd/files/.config/mpd/mpd.conf
@@ -25,7 +25,7 @@ playlist_directory		"~/.config/mpd/playlists"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file			"~/.config/mpd/database"
+# db_file			"~/.config/mpd/database"
 #
 # These settings are the locations for the daemon log files for the daemon.
 # These logs are great for troubleshooting, depending on your log_level
@@ -122,7 +122,7 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # This setting enables automatic update of MPD's database when files in 
 # music_directory are changed.
 #
-auto_update	"yes"
+# auto_update	"yes"
 #
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
@@ -179,11 +179,11 @@ auto_update	"yes"
 # Database #######################################################################
 #
 
-#database {
-#       plugin "proxy"
-#       host "other.mpd.host"
-#       port "6600"
-#}
+database {
+       plugin "proxy"
+       host "gauss"
+       port "6600"
+}
 
 # Input #######################################################################
 #
@@ -281,7 +281,7 @@ input {
 #
 audio_output {
 	type		"pulse"
-	name		"My Pulse Output"
+	name		"mpd"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
 }
