--- a/modules/mpd/files/.config/mpd/mpd.conf
+++ b/modules/mpd/files/.config/mpd/mpd.conf
@@ -181,7 +181,7 @@ sticker_file			"~/.config/mpd/sticker.sql"
 
 database {
        plugin "proxy"
-       host "gauss"
+       host "home.apetre.sc"
        port "6600"
 }
 
