--- a/modules/WindowsTerminal/settings.json
+++ b/modules/WindowsTerminal/settings.json
@@ -8,7 +8,7 @@
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
 
-    "defaultProfile": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+    "defaultProfile": "{a5a97cb8-8961-5535-816d-772efe0c6a3f}",
 
     // You can add more global application settings here.
     // To learn more about global settings, visit https://aka.ms/terminal-global-settings
@@ -70,6 +70,15 @@
                 "icon": "%USERPROFILE%/.local/share/terminal/icons/ubuntu.png",
                 "colorScheme": "High-Contrast Zenburn",
                 "startingDirectory": "//wsl$/Ubuntu/home/apetresc"
+            },
+            {
+                "guid": "{a5a97cb8-8961-5535-816d-772efe0c6a3f}",
+                "hidden": false,
+                "name": "Arch",
+                "source": "Windows.Terminal.Wsl",
+                "icon": "%USERPROFILE%/.local/share/terminal/icons/arch.png",
+                "colorScheme": "High-Contrast Zenburn",
+                "startingDirectory": "//wsl$/Arch/home/apetresc"
             }
         ]
     },
