--- a/modules/gpg/files/.gnupg/gpg.conf
+++ b/modules/gpg/files/.gnupg/gpg.conf
@@ -1,9 +1,6 @@
 no-greeting
 default-key 914F768A
 
-keyserver hkp://keys.gnupg.net
-keyserver hkps://keys.openpgp.net
-keyserver hkps://keys.mailvelope.com
-keyserver pgp.mit.edu
+keyserver hkps://keys.openpgp.org
 
 use-agent
