--- a/modules/nvim/files/.config/nvim/coc-settings.json
+++ b/modules/nvim/files/.config/nvim/coc-settings.json
@@ -26,7 +26,7 @@
        }
     },
     "terraform": {
-      "command": "terraform-lsp",
+      "command": "terraform-ls",
       "filetypes": ["terraform"],
       "initializationOptions": {}
     }
