--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -48,7 +48,8 @@ set-option -g base-index 1
 
 # Basic color scheme
 # set -g default-terminal screen-256color
-set -g default-terminal tmux-256color
+# set -g default-terminal tmux-256color
+set -g default-terminal "xterm-256color"
 setw -g mode-style bold
 set -g status-style dim
 set -g status-left-length 25
