mpd: remove proxy database

--- a/modules/mpd/files/.config/mpd/mpd.conf
+++ b/modules/mpd/files/.config/mpd/mpd.conf
@@ -179,11 +179,11 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # Database #######################################################################
 #
 
-database {
-       plugin "proxy"
-       host "home.apetre.sc"
-       port "6600"
-}
+#database {
+#       plugin "proxy"
+#       host "home.apetre.sc"
+#       port "6600"
+#}
 
 # Input #######################################################################
 #
