fontconfig: set system monospace font to Terminus

--- a/modules/fontconfig/files/.config/fontconfig/fonts.conf
+++ b/modules/fontconfig/files/.config/fontconfig/fonts.conf
@@ -10,7 +10,7 @@
    <string>monospace</string>
   </test>
   <edit binding="strong" mode="prepend" name="family">
-   <string>JetBrains Mono</string>
+   <string>Terminus</string>
   </edit>
  </match>
 </fontconfig>
