tmux: switch back to tmux-256color term and add instructions for getting the terminfo

--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -4,6 +4,8 @@ set -g prefix C-a
 # Still send 'go to beginning of line' key
 bind a send-prefix
 
+set -g extended-keys on
+
 # Enable pane/window control with the mouse
 set -g mouse on
 
@@ -45,11 +47,12 @@ set-option -g history-limit 10000
 # but not so much in terminal multiplexers where that zero is all the way on the other side of the keyboard.
 set-option -g base-index 1
 
+# If tmux-256color doesn't work for some reason, get the terminfo file for it
+# from https://invisible-island.net/datafiles/current/terminfo.src.gz
+set -g default-terminal tmux-256color
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # Basic color scheme
-# set -g default-terminal screen-256color
-# set -g default-terminal tmux-256color
-set -g default-terminal "xterm-256color"
 setw -g mode-style bold
 set -g status-style dim
 set -g status-left-length 25
@@ -58,5 +61,5 @@ setw -g window-status-current-style bold
 set -g message-style bold
 
 # Temporary workaround for st
-set -as terminal-overrides ',st*:Ss@'
-set -as terminal-overrides ',st*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -as terminal-overrides ',st*:Ss@'
+# set -as terminal-overrides ',st*:Ss=\E[%p1%d q:Se=\E[2 q'
