--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -47,6 +47,9 @@ set-option -g history-limit 10000
 # but not so much in terminal multiplexers where that zero is all the way on the other side of the keyboard.
 set-option -g base-index 1
 
+# Send focus events
+set-option -g focus-events on
+
 # If tmux-256color doesn't work for some reason, get the terminfo file for it
 # from https://invisible-island.net/datafiles/current/terminfo.src.gz
 set -g default-terminal tmux-256color
