--- a/modules/git/files/.gitconfig
+++ b/modules/git/files/.gitconfig
@@ -2,8 +2,23 @@
 	name = Adrian Petrescu
 	email = adrian@apetre.sc
 	signingkey = ~/.ssh/id_rsa.pub
+[core]
+	filemode = true
+	excludesfile = ~/.gitignore_global
+	autocrlf = input
+	safecrlf = true
+	eol = lf
 [init]
 	defaultBranch = master
+[alias]
+	glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	st = status
+	rbranch = branch -a --sort=-committerdate
+	ignore = update-index --assume-unchanged
+	unignore = update-index --no-assume-unchanged
+	revert = checkout --
+	cloner = clone --recurse-submodules -j8
+	pullr = pull --recurse-submodules -j8
 [sendemail]
 	smtpserver = /usr/bin/msmtp
 	smtpserveroption=-a
@@ -14,52 +29,36 @@
 	diff = auto
 	status = auto
 	branch = auto
-[diff]
-	renames = copy
-	renameLimit = 2000
-	tool = vimdiff
-[merge]
-	tool = vimdiff
-[alias]
-	glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-	st = status
-	rbranch = branch -a --sort=-committerdate
-	ignore = update-index --assume-unchanged
-	unignore = update-index --no-assume-unchanged
-	revert = checkout --
-	cloner = clone --recurse-submodules -j8
-	pullr = clone --recurse-submodules -j8
-[github]
-	user = apetresc
 [push]
 	default = current
 [pull]
 	rebase = false
-[mergetool]
-	keepBackup = true
-	prompt = false
-[difftool "Kaleidoscope"]
-	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
-[difftool]
-	prompt = false
-[mergetool "Kaleidoscope"]
-	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
-	trustExitCode = true
-[gist]
-	browse = yes
-[core]
-	filemode = true
-	excludesfile = ~/.gitignore_global
-	autocrlf = input
-	safecrlf = true
-	eol = lf
-
 [filter "lfs"]
 	required = true
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 
+# Diffing and merging
+[diff]
+	renames = copy
+	renameLimit = 2000
+	tool = vimdiff
+[merge]
+	tool = vimdiff
+[mergetool]
+	keepBackup = true
+	prompt = false
+[difftool]
+	prompt = false
+
+# Github-specific settings
+[gist]
+	browse = yes
+[github]
+	user = apetresc
+
+# Commit signing
 [gpg]
 	format = ssh
 [commit]
