weechat: don't autoload plugins we don't need

--- a/modules/weechat/files/.weechat/weechat.conf
+++ b/modules/weechat/files/.weechat/weechat.conf
@@ -249,7 +249,7 @@ gnutls_handshake_timeout = 30
 proxy_curl = ""
 
 [plugin]
-autoload = "*"
+autoload = "*,!ruby,!lua,!tcl,!guile,!perl,!spell"
 extension = ".so,.dll"
 path = "%h/plugins"
 save_config_on_unload = on
