weechat: update config for latest update

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -9,7 +9,7 @@
 # For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
-config_version = 2
+config_version = 3
 
 [look]
 buffer_open_before_autojoin = on
@@ -31,6 +31,7 @@ display_host_join = on
 display_host_join_local = on
 display_host_notice = on
 display_host_quit = on
+display_host_wallops = on
 display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
@@ -41,13 +42,19 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
+ignore_tag_messages = off
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
 item_nick_prefix = on
 join_auto_add_chantype = off
+list_buffer = on
+list_buffer_scroll_horizontal = 10
+list_buffer_sort = "~name2"
+list_buffer_topic_strip_colors = on
 msgbuffer_fallback = current
 new_channel_position = none
+new_list_position = none
 new_pv_position = none
 nick_completion_smart = speakers
 nick_mode = prefix
@@ -58,6 +65,7 @@ notice_welcome_redirect = on
 notice_welcome_tags = ""
 notify_tags_ison = "notify_message"
 notify_tags_whois = "notify_message"
+open_pv_buffer_echo_msg = on
 part_closes_buffer = off
 pv_buffer = independent
 pv_tags = "notify_private"
@@ -87,6 +95,8 @@ item_nick_modes = default
 item_tls_version_deprecated = yellow
 item_tls_version_insecure = red
 item_tls_version_ok = green
+list_buffer_line_selected = white
+list_buffer_line_selected_bg = 24
 message_account = cyan
 message_chghost = brown
 message_join = green
@@ -98,6 +108,7 @@ nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v
 notice = green
 reason_kick = default
 reason_quit = default
+term_remap = "0,-1:darkgray"
 topic_current = default
 topic_new = white
 topic_old = default
@@ -127,8 +138,7 @@ whois_double_nick = off
 
 [server_default]
 addresses = ""
-anti_flood_prio_high = 2
-anti_flood_prio_low = 2
+anti_flood = 2000
 autoconnect = off
 autojoin = ""
 autojoin_dynamic = off
@@ -208,8 +218,7 @@ oftc.autojoin_dynamic
 oftc.autorejoin
 oftc.autorejoin_delay
 oftc.connection_timeout
-oftc.anti_flood_prio_high
-oftc.anti_flood_prio_low
+oftc.anti_flood
 oftc.away_check
 oftc.away_check_max_nicks
 oftc.msg_kick
@@ -254,8 +263,7 @@ libera.autojoin_dynamic
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
-libera.anti_flood_prio_high
-libera.anti_flood_prio_low
+libera.anti_flood
 libera.away_check
 libera.away_check_max_nicks
 libera.msg_kick
@@ -300,8 +308,7 @@ retrowithin.autojoin_dynamic
 retrowithin.autorejoin
 retrowithin.autorejoin_delay
 retrowithin.connection_timeout
-retrowithin.anti_flood_prio_high
-retrowithin.anti_flood_prio_low
+retrowithin.anti_flood
 retrowithin.away_check
 retrowithin.away_check_max_nicks
 retrowithin.msg_kick
@@ -346,8 +353,7 @@ undernet.autojoin_dynamic
 undernet.autorejoin
 undernet.autorejoin_delay
 undernet.connection_timeout
-undernet.anti_flood_prio_high
-undernet.anti_flood_prio_low
+undernet.anti_flood
 undernet.away_check
 undernet.away_check_max_nicks
 undernet.msg_kick
@@ -392,8 +398,7 @@ myanonamouse.autojoin_dynamic
 myanonamouse.autorejoin
 myanonamouse.autorejoin_delay
 myanonamouse.connection_timeout
-myanonamouse.anti_flood_prio_high
-myanonamouse.anti_flood_prio_low
+myanonamouse.anti_flood
 myanonamouse.away_check
 myanonamouse.away_check_max_nicks
 myanonamouse.msg_kick
@@ -438,8 +443,7 @@ scratch-network.autojoin_dynamic
 scratch-network.autorejoin
 scratch-network.autorejoin_delay
 scratch-network.connection_timeout
-scratch-network.anti_flood_prio_high
-scratch-network.anti_flood_prio_low
+scratch-network.anti_flood
 scratch-network.away_check
 scratch-network.away_check_max_nicks
 scratch-network.msg_kick
@@ -484,8 +488,7 @@ synirc.autojoin_dynamic
 synirc.autorejoin
 synirc.autorejoin_delay
 synirc.connection_timeout
-synirc.anti_flood_prio_high
-synirc.anti_flood_prio_low
+synirc.anti_flood
 synirc.away_check
 synirc.away_check_max_nicks
 synirc.msg_kick
@@ -530,8 +533,7 @@ freenode.autojoin_dynamic
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
+freenode.anti_flood
 freenode.away_check
 freenode.away_check_max_nicks
 freenode.msg_kick
